--- a/gauge_graph.html
+++ b/gauge_graph.html
@@ -17,7 +17,7 @@
                 width: 800, height: 240,
                 redFrom: 0, redTo: 80,  // Red color for 0-80
                 greenFrom: 80, greenTo: 100,  // Green color for 80-100
-                minorTicks: 5,
+                minorTicks: 2,
                 backgroundColor: { fill:'transparent' },  // Making the gauge background transparent
                 greenColor: '#00ff00',  // Adjusting the gauge colors for better visibility
                 redColor: '#ff0000',
@@ -28,7 +28,7 @@
             var chart = new google.visualization.Gauge(document.getElementById('chart_div'));
 
             function updateData() {
-                fetch('http://localhost:8001/data')
+                fetch('https://prompt-major-trout.ngrok-free.app/data')
                 .then(response => response.json())
                 .then(json => {
                     data.setValue(0, 1, json.value);
@@ -37,7 +37,7 @@
             }
 
             updateData();  // Initial data update
-            setInterval(updateData, 2000);  // Update every 2 seconds
+            setInterval(updateData, 500);  // Update every 2 seconds
         }
     </script>
 </head>
